--- a/exercice 4/index.html
+++ b/exercice 4/index.html
@@ -6,10 +6,27 @@
 </head>
 <body>
   <form>
-    <label for="nom">Votre nom  : </label><input type="text" name="nom" value="Doe" id="nom" />
-    <label for="prenom">Votre prenom  : </label><input type="text" name="prenom" value="John" id="prenom" />
-    <label for="ville">Votre ville  : </label><input type="text" name="ville" value="New York" id="ville" />
-    <button type="button" name="button">RAZ</button>
+    <label for="nom">Votre nom  : </label>
+    <input type="text" name="nom" value="Doe" id="nom" />
+    <label for="prenom">Votre prenom  : </label>
+    <input type="text" name="prenom" value="John" id="prenom" />
+    <label for="ville">Votre ville  : </label>
+    <input type="text" name="ville" value="New York" id="ville" />
+    <button type="button" name="button" onClick="reset_all()">RAZ</button>
   </form>
+
+  <script type="text/javascript">
+
+  function reset_all(){
+
+var reset=document.getElementById("nom").value="";
+var reset2=document.getElementById("prenom").value="";
+var reset3=document.getElementById("ville").value="";
+
+  }
+
+
+
+  </script>
 </body>
 </html>
