--- a/exercice 6/index.html
+++ b/exercice 6/index.html
@@ -5,10 +5,37 @@
     <title>Exercice 6</title>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1" />
-      <img src="images/image2.jpg" id="image2" />
-      <img src="images/image3.jpg" id="image3" />
-      <img src="images/image4.jpg" id="image4" />
-      <img src="images/image5.jpg" id="image5" />
+      <img src="images/image1.jpg" id="image1" onmouseover="change();"onmouseout="retour();"/>
+      <img src="images/image2.jpg" id="image2" onmouseover="change();"onmouseout="retour();"/>
+      <img src="images/image3.jpg" id="image3" onmouseover="change();"onmouseout="retour();"/>
+      <img src="images/image4.jpg" id="image4" onmouseover="change();"onmouseout="retour();"/>
+      <img src="images/image5.jpg" id="image5" onmouseover="change();"onmouseout="retour();"/>
   </body>
+
+  <script type="text/javascript">
+
+  function change()
+{
+
+document.getElementById('image1').src = 'images/image2.jpg';
+document.getElementById('image2').src = 'images/image1.jpg';
+document.getElementById('image3').src = 'images/image4.jpg';
+document.getElementById('image4').src = 'images/image5.jpg';
+document.getElementById('image5').src = 'images/image3.jpg';
+
+
+}
+
+function retour()
+{
+
+document.getElementById('image1').src = 'images/image1.jpg';
+document.getElementById('image2').src = 'images/image2.jpg';
+document.getElementById('image3').src = 'images/image3.jpg';
+document.getElementById('image4').src = 'images/image4.jpg';
+document.getElementById('image5').src = 'images/image5.jpg';
+
+
+}
+  </script>
 </html>
